--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,198 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+
+}
+nav {
+  display: flex;
+  align-items: center;
+  height: 70px;
+  display: flex;
+  padding: 20px 36px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav .airbnb-icon {
+  max-width: 120px;
+  width: 120px;
+  height: 54px;
+}
+section {
+  padding: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero {
   display: flex;
   flex-direction: column;
+}
+
+.hero .hero-pic {
+  align-self: center;
+
+}
+
+.hero .hero-content {
+  padding-left: 40px;
+  padding-top:40px ;
+}
+
+.hero  h1 {
+  margin-bottom: 16px;
+  font-size: 36px;
+}
+
+.hero p {
+  margin-top: 0;
+  max-width: 390px;
+  font-size: 16px;
+}
+
+
+
+
+.card {
+  display: flex;
+  overflow-x: auto;
+  flex-wrap: nowrap;
+  gap: 20px;
+  font-size: 12px;
+  justify-content: space-between;  
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.card-image {
+  width: 299px;
+  height: 400px;
+}
+
+.card-item {
+  display: flex;  
+  flex: 0 0 auto;         
+  flex-direction: column; 
+  position: relative;
+}
+
+.card .card-item p {
+  margin: 0;
+}
+
+.card .card-item span{
+  margin: 0;
+  padding-left: 5px;
+}
+
+.card-stats {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card-star {
+  height: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card-sold-out {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+
+@media (max-width:1080px) {
+  .hero .hero-pic {
+    width: 800px;
+    height: 468.8px;
   }
-  to {
-    transform: rotate(360deg);
+  .card-image {
+    width: 262.12px;
+    height: 350px;
+  }
+  .card {
+    margin-left:80px ;
+    margin-right:80px ;
+  }
+
+}
+
+@media (max-width:1000px) {
+  .hero .hero-pic {
+    width: 600px;
+    height: 351.6px;
+  }
+  .card-image {
+    width: 224.68px;
+    height: 300px;
+  }
+  .card {
+    margin-left:60px ;
+    margin-right:60px ;
+  }
+
+}
+
+@media (max-width:800px) {
+  .hero .hero-pic {
+    width: 395.91px;
+    height: 232px;
+  }
+  .card-image {
+    width: 134.8px;
+    height: 180px;
+  }
+  .card {
+    margin-left:40px ;
+    margin-right:40px ;
+  }
+}
+
+@media (max-width:420px) {
+  .hero .hero-pic {
+    width: 341.3px; ;
+    height:200px; 
+  }
+  .card-image {
+    width: 112.3px;
+    height: 150px;
+  }
+  .card {
+    margin-left:20px ;
+    margin-right:20px ;
+  }
+  .card .card-item p {
+    margin: 0;
+    max-width: 100px;
+  }
+}
+
+
+@media (max-width:300px) {
+  .hero .hero-pic {
+    width: 260px; ;
+    height:152px; 
+  }
+  .card-image {
+    width: 112.3px;
+    height: 150px;
+  }
+  .card {
+    margin-left:20px ;
+    margin-right:20px ;
+  }
+  .card .card-item p {
+    margin: 0;
+    max-width: 100px;
   }
 }
